--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="title">
       <div class="box">
         <p>
-          Welcome
+          Paul Brock Core Interaction
         </p>
       </div>
     </div>
