--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>floop</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uer7upm.css">
-
-  </head>  
-  <body>
+    <title>Paul Brock</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/uer7upm.css" />
+  </head>
+  <body onLoad="pageScroll()">
     <div class="title">
       <div class="box">
-        <p>
-          Paul Brock Core Interaction
-        </p>
+        <p class="intro">Paul Brock <br />Core Interaction</p>
+        <nav>
+          <ul class="nav-links">
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Work</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </div>
-    <div class="content">
-      
-    </div>
-    <script type="text/javascript" src="script.js"></script>   
+    <div class="content"></div>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
