--- a/Week3/index.html
+++ b/Week3/index.html
@@ -11,7 +11,12 @@
   <body onLoad="pageScroll()">
     <div class="title">
       <div class="box">
-        <p class="intro">Paul Brock <br />Core Interaction</p>
+        <p class="intro">
+          Paul Brock
+        </p>
+        <p class="ci">
+          Core Interaction
+        </p>
         <nav>
           <ul class="nav-links">
             <li>
