--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <p class="intro">
           Paul Brock
         </p>
-        <p class="ci">
-          Core Interaction
-        </p>
+        <p class="ci"><br />Core Interaction</p>
         <nav>
           <ul class="nav-links">
             <li>
