--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <a href="#">About</a>
             </li>
             <li>
-              <a href="#">Work</a>
+              <a href="light.html">Work</a>
             </li>
             <li>
               <a href="#">Contact</a>
