--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a href="/CoreInteraction/Summary/index.html">Work</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="/CoreInteraction/week5/news.html">News</a>
             </li>
           </ul>
         </nav>
