--- a/index.html
+++ b/index.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Paul Brock</title>
+    <title>Hello!</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/uer7upm.css" />
+
+    <link rel="stylesheet" href="/style.css" />
+
+    <script src="/script.js" defer></script>
   </head>
-  <body onLoad="pageScroll()">
-    <div class="title">
-      <div class="box">
-        <p class="intro">
-          Paul Brock
-        </p>
-        <p class="ci"><br />Core Interaction</p>
-        <nav>
-          <ul class="nav-links">
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li>
-              <a href="/CoreInteraction/Summary/index.html">Work</a>
-            </li>
-            <li>
-              <a href="/CoreInteraction/week5/news.html">News</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+  <body>
+    <div class="all">
+      <div class="a"></div>
+      <div class="b"></div>
+      <div class="c"></div>
+      <div class="d"></div>
+      <div class="e"></div>
+      <div class="f"></div>
+      <div class="g"></div>
+      <div class="h"></div>
+      <div class="i"></div>
+      <div class="j"></div>
+      <div class="k"></div>
+      <div class="l"></div>
+      <div class="m"></div>
+      <div class="n"></div>
     </div>
-    <div class="content"></div>
-    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
