--- a/Week6/animate.html
+++ b/Week6/animate.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="animate.css" />
   </head>
   <body>
+    <div
+      style="width:100%;height:0px;position:relative;padding-bottom:67.436%;"
+    >
+      <iframe
+        src="https://streamable.com/s/afbb5/obratv"
+        frameborder="0"
+        width="100%"
+        height="100%"
+        allowfullscreen
+        style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"
+      ></iframe>
+    </div>
     <center>
       <div class="shapes">
         <div class="s1"></div>
