Homepage Update All folders

--- a/Week2/index2.html
+++ b/Week2/index2.html
@@ -9,7 +9,7 @@
       <div>
         <header>
             <h1>
-               A Summary of the Language 
+               A Summary of the Language -  <a href="week2\index11.html">Without Style</a>
               </h1>
                <h3>
                  <em>Christopher Alexander, Sara Ishikawa, Murray Silverstein, Max Jacobson, Ingrid Fiksdahl-KingShlomo Angel</em>
