--- a/Week6/animatel.html
+++ b/Week6/animatel.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Animated Paul B</title>
-    <link rel="stylesheet" href="animate.css" />
+    <link rel="stylesheet" href="animatl.css" />
   </head>
   <body>
+    <a href="animates.html">Animated Studio Exercise</a>
     <div
       style="width:100%;height:0px;position:relative;padding-bottom:67.436%;"
     >
