--- a/index.html
+++ b/index.html
@@ -15,19 +15,34 @@
           Paul Brock
         </p>
         <p class="ci"><br />Core Interaction</p>
-        <nav>
-          <ul class="nav-links">
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li>
-              <a href="/CoreInteraction/Summary/index.html">Work</a>
-            </li>
-            <li>
-              <a href="/CoreInteraction/week5/news.html">News</a>
-            </li>
-          </ul>
-        </nav>
+        <div class="parent">
+          <nav>
+            <ul class="nav-links">
+              <div class="cell1">
+                <li>
+                  <a href="week1\index.html">Week 1</a>
+                </li>
+                <li>
+                  <a href="week2\index2.html">Week 2</a>
+                </li>
+                <li>
+                  <a href="week3\index.html">Week 3</a>
+                </li>
+                <li>
+                  <a href="Summary\index.html">Week 4</a>
+                </li>
+              </div>
+              <div class="cell2">
+                <li>
+                  <a href="week5\news.html">Week 5</a>
+                </li>
+                <li>
+                  <a href="Week6\animatel.html">Week 6</a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+        </div>
       </div>
     </div>
     <div class="content"></div>
