--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <li>
                   <a href="Week6\animatel.html">Week 6</a>
                 </li>
+                <li>
+                  <a href="Week8\text.html">Week 8-1</a>
+                </li>
+                <li>
+                  <a href="Week8\images.html">Week 8-2</a>
+                </li>
               </div>
             </ul>
           </nav>
