--- a/index.html
+++ b/index.html
@@ -1,57 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Paul Brock</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/uer7upm.css" />
-  </head>
-  <body onLoad="pageScroll()">
-    <div class="title">
-      <div class="box">
-        <p class="intro">
-          Paul Brock
-        </p>
-        <p class="ci"><br />Core Interaction</p>
-        <div class="parent">
-          <nav>
-            <ul class="nav-links">
-              <div class="cell1">
-                <li>
-                  <a href="week1\index.html">Week 1</a>
-                </li>
-                <li>
-                  <a href="week2\index2.html">Week 2</a>
-                </li>
-                <li>
-                  <a href="week3\index.html">Week 3</a>
-                </li>
-                <li>
-                  <a href="Summary\index.html">Week 4</a>
-                </li>
-              </div>
-              <div class="cell2">
-                <li>
-                  <a href="week5\news.html">Week 5</a>
-                </li>
-                <li>
-                  <a href="Week6\animatel.html">Week 6</a>
-                </li>
-                <li>
-                  <a href="Week8\text.html">Week 8-1</a>
-                </li>
-                <li>
-                  <a href="Week8\images.html">Week 8-2</a>
-                </li>
-              </div>
-            </ul>
-          </nav>
-        </div>
+
+<head>
+  <title>Paul Brock</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/uer7upm.css" />
+</head>
+
+<body onLoad="pageScroll()">
+  <div class="title">
+    <div class="box">
+      <p class="intro">
+        Paul Brock
+      </p>
+      <p class="ci"><br />Core Interaction</p>
+      <div class="parent">
+        <nav>
+          <ul class="nav-links">
+            <div class="cell1">
+              <li>
+                <a href="week1\index.html">Week 1</a>
+              </li>
+              <li>
+                <a href="week2\index2.html">Week 2</a>
+              </li>
+              <li>
+                <a href="week3\index.html">Week 3</a>
+              </li>
+              <li>
+                <a href="Summary\index.html">Week 4</a>
+              </li>
+            </div>
+            <div class="cell2">
+              <li>
+                <a href="week5\news.html">Week 5</a>
+              </li>
+              <li>
+                <a href="Week6\animatel.html">Week 6</a>
+              </li>
+              <li>
+                <a href="Week8\text.html">Week 8-1</a>
+              </li>
+              <li>
+                <a href="Week8\images.html">Week 8-2</a>
+              </li>
+              <li>
+                <a href="Archive/index.html">Archive</a>
+              </li>
+            </div>
+          </ul>
+        </nav>
       </div>
     </div>
-    <div class="content"></div>
-    <script type="text/javascript" src="script.js"></script>
-  </body>
+  </div>
+  <div class="content"></div>
+  <script type="text/javascript" src="script.js"></script>
+</body>
+
 </html>
