--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
               <li>
                 <a href="Summary\index.html">Week 4</a>
               </li>
+              <li>
+                <a href="Week10\index.html">Atlas</a>
+              </li>
             </div>
             <div class="cell2">
               <li>
@@ -50,6 +53,7 @@
               <li>
                 <a href="Archive/index.html">Archive</a>
               </li>
+
             </div>
           </ul>
         </nav>
