--- a/Week10/index.html
+++ b/Week10/index.html
@@ -10,7 +10,7 @@
     <title>Hong Kong Atlas</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <link rel="shortcut icon" href="assets\hklogo.ico">
 </head>
 
 <body>
